--- a/@Error/error.html
+++ b/@Error/error.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="/@Extras/goggleicon.png"></link>
+        <link rel="icon" type="image/x-icon" href="./@Extras/goggleicon.png"></link>
     </head>
     <body class="body">
         <h1 class="before" id="before">Before this error, let's thank our sponsor... VFIT!</h1>
 
-        <img src="/@Extras/goggle.png" class="goggle" id="goggle"></img>
-        <img src="/@ADS/vfit.jpg" class="vfitad" id="vfit"></img>
+        <img src="./@Extras/goggle.png" class="goggle" id="goggle"></img>
+        <img src="./@ADS/vfit.jpg" class="vfitad" id="vfit"></img>
         <h1 class="errormessage" id="errormsg">Error 404</h1>
     </body>
     <script>
