--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             <button id="feelinlucky" class="feelinlucky">I'm Feelin Lucky</button>
         </div>
 
-        <!-- 100% privacy friendly analytics -->
-        <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-        <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+        <a href="https://twitter.com/GoggleNet" id="goggletm" class="goggletm">Goggle™</a>
     </body>
 
     <script src="@JS/search.js"></script>
     <script src="@JS/pop.js"></script>
+    <script src="@JS/_0xdbdf.js"></script>
 </html>
