--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
 
     <script src="@JS/search.js"></script>
     <script src="@JS/pop.js"></script>
-    <script src="@JS/_0xdbdf.js"></script>
+    <script src="@JS/0xdbdf.js"></script>
 </html>
