--- a/@Extras/NO THIS IS GOGGLE/nothisisgoggle.html
+++ b/@Extras/NO THIS IS GOGGLE/nothisisgoggle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" type="image/x-icon" href="/@Extras/goggleicon.png"></link>
+        <link rel="icon" type="image/x-icon" href="./@Extras/goggleicon.png"></link>
         <title id="goggletitle">Goggle Search - Google???</title>
     </head>
     <body>
