--- a/@Extras/god.html
+++ b/@Extras/god.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css"></link>
-        <link rel="icon" type="image/x-icon" href="/goggleicon.png"></link>
+        <link rel="icon" type="image/x-icon" href="goggleicon.png"></link>
         <title id="goggletitle">Goggle - God</title>
     </head>
     <body class="body">
