--- a/@Extras/god.html
+++ b/@Extras/god.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/style.css"></link>
+        <link rel="stylesheet" href="./style.css"></link>
         <link rel="icon" type="image/x-icon" href="goggleicon.png"></link>
         <title id="goggletitle">Goggle - God</title>
     </head>
