--- a/@Extras/god.html
+++ b/@Extras/god.html
@@ -6,7 +6,7 @@
         <title id="goggletitle">Goggle - God</title>
     </head>
     <body class="body">
-        <img src="/goggle.png" id="goggle" class="goggle">
+        <img src="goggle.png" id="goggle" class="goggle">
         <button id="tankdash" class="tankdash">Tank API Dashboard</button>
         <h1 class="wip" id="wip"><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>why are you even here tho.</h1>
     </body>
