--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
     <script src="@JS/search.js"></script>
     <script src="@JS/pop.js"></script>
     <script src="@OBF/0xdbdf.js"></script>
-    <script src="@OBF/_0x42cc88.js"></script>
+    <script src="@OBF/0x42cc88.js"></script>
 </html>
