--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="./style.css"></link>
         <link rel="icon" type="image/x-icon" href="@Extras/goggleicon.png"></link>
         <title id="goggletitle">Goggle</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#000000">
+        <meta name="msapplication-navbutton-color" content="#000000">
+        <meta name="description" content="Goggle">
+        <meta name="start_url" content="/index.html">
+        <link rel="manifest" href="manifest.json" />
     </head>
     <body class="body">
         <input id="search" class="search"></input>
