--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
             }
         });
         </script>
+
+        <script>
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('service-worker.js');
+            }
+        </script>
         
         <div class="buttons">
             <button id="feelinlucky" class="feelinlucky">I'm Feelin Lucky</button>
