--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         </div>
 
         <a href="https://twitter.com/GoggleNet" id="goggletm" class="goggletm">Goggle™</a>
+
+        <!-- 100% privacy friendly analytics -->
+        <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+        <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     </body>
 
     <script src="@JS/search.js"></script>
