--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
         <input id="search" class="search"></input>
         <img src="@Extras/goggle.png" class="goggle" id="goggle"></img>
         <div id="searchdiv" class="searchdiv"></div>
+        <script>
+            var username = localStorage.getItem("username");
+            var img = document.createElement("img");
+            img.src = `https://gravatar.com/avatar/EMAIL_MDS?d=https%3A%2F%2Fui-avatars.com%2Fapi%2F/${username}/128`
+            document.body.appendChild(img);
+
+            img.style.position = "absolute";
+            img.style.top = "10px";
+            img.style.borderRadius = "50%";
+            img.style.width = "50px";
+            img.style.cursor = "pointer";
+
+            img.addEventListener("click", function() {
+                window.location.assign("@Extras/login/form.html")
+            });
+        </script>
 
         <script>
             search.addEventListener("keyup", function (event) { // thanks to geeksforgeeks for this code :))
