Happy Birth Month Goggle! (goggles birthmonth is officially february)

--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
     <script src="@JS/search.js"></script>
     <script src="@JS/pop.js"></script>
     <script src="@OBF/0xdbdf.js"></script>
+    <script src="pop-bang.js"></script>
 </html>
