discord embed test

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <meta name="description" content="Goggle">
         <meta name="start_url" content="/index.html">
         <link rel="manifest" href="manifest.json" />
+        <meta content="Goggle - The Most Useless Seach Engine" property="og:title" />
+        <meta content="Goggle is literally the most useless search engine" property="og:description" />
+        <meta content="https://www.goggle-net.tk/" property="og:url" />
+        <meta content="@Extras/goggleicon.png" property="og:image" />
     </head>
     <body class="body">
         <input id="search" class="search"></input>
