--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css"></link>
-        <link rel="icon" type="image/x-icon" href="Extras/goggleicon.png"></link>
+        <link rel="icon" type="image/x-icon" href="goggleicon.png"></link>
         <title id="goggletitle">Goggle</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#000000">
@@ -17,7 +17,7 @@
     </head>
     <body class="body">
         <input id="search" class="search"></input>
-        <img src="Extras/goggle.png" class="goggle" id="goggle"></img>
+        <img src="goggle.png" class="goggle" id="goggle"></img>
         <div id="searchdiv" class="searchdiv"></div>
         <script>
             var username = localStorage.getItem("username");
