--- a/@Extras/login/form.html
+++ b/@Extras/login/form.html
@@ -2,7 +2,7 @@
 <html>   
 <head>  
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="icon" type="image/x-icon" href="goggleicon.png"></link>
+<link rel="icon" type="image/x-icon" href="/@Extras/goggleicon.png"></link>
 <title> Login Page </title>  
 <style>   
 Body {  
@@ -57,7 +57,7 @@ button {
 </style>   
 </head>    
 <body>    
-    <center><img src="goggle.png" class="goggle" id="goggle"></img></center>
+    <center><img src="/@Extras/goggle.png" class="goggle" id="goggle"></img></center>
     <form>  
         <div class="container">   
             <label>Username : </label>   
