--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
                 background-color: #202124;
                 width: auto;
             }
+            #search {
+                height: 40px;
+                width: 40%;
+
+                position: relative;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                top: 300px;
+            }
+            #search:focus {outline:none;}
         </style>
         <script>
             var username = localStorage.getItem("username");
