Finalised Goggle V2 - Part 2 Update.
Have fun!

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <button id="feelinlucky" class="feelinlucky">I'm Feelin Lucky</button>
         </div>
 
-        <a href="https://twitter.com/GoggleNet" id="goggletm" class="goggletm">Goggle™</a>
+        <p onclick="window.location.assign('https://twitter.com/GoggleNet');" id="goggletm" class="goggletm">Goggle™</p>
 
         <!-- 100% privacy friendly analytics -->
         <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
