Goggle Themes Update!! THEMES. NOW.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                 }
                 #search:focus {outline:none;}
             </style>
-            <button class="themeimp" onclick="JSON_IMPORTER()">Import Themes</button>
             <button class="themeexp" id="export-btn">Theme Editor</button>
 
             <script>
@@ -102,6 +101,7 @@
             </div>
     
             <p onclick="window.location.assign('https://twitter.com/GoggleNet');" id="goggletm" class="goggletm">Goggle™</p>
+            <p class="themeimp" onclick="JSON_IMPORTER()">Import Themes</button></p>
     
             <!-- 100% privacy friendly analytics -->
             <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
