Overhaul and Re-Brand

--- a/@Extras/login/form.html
+++ b/@Extras/login/form.html
@@ -2,7 +2,7 @@
 <html>   
 <head>  
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="icon" type="image/x-icon" href="/@Extras/goggleicon.png"></link>
+<link rel="icon" type="image/x-icon" href="/@Extras/reupmini.png"></link>
 <title> Login Page </title>  
 <style>   
 Body {  
@@ -57,7 +57,7 @@ button {
 </style>   
 </head>    
 <body>    
-    <center><img src="/@Extras/goggle.png" class="goggle" id="goggle"></img></center>
+    <center><img src="/@Extras/REFIND.png" class="goggle" id="goggle"></img></center>
     <form>  
         <div class="container">   
             <label>Username : </label>   
@@ -65,7 +65,7 @@ button {
             <label>Password : </label>   
             <input id="passwordtag" type="password" placeholder="Enter Password" name="password" required>  
             <button id="submit" type="submit">Login</button>   
-            <button onclick="window.location.replace('/index.html')" type="button" class="cancelbtn"><-- Back to Goggle</button>   
+            <button onclick="window.location.replace('/index.html')" type="button" class="cancelbtn"><-- Back to Re-Find</button>   
         </div>   
     </form>     
 </body>   
