Added new search stuff

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                     width: 40%;
     
                     position: relative;
-                    display: block;
                     margin-left: auto;
                     margin-right: auto;
                     top: 300px;
@@ -159,4 +158,5 @@
 
     <script src="@OBF/0xdbdf.js"></script>
     <script src="pop-bang.js"></script>
+    <script src="checkurl.js"></script>
 </html>
