Fixed up the searching (a tad bit), sessions work better

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta content="Re-Find is the most findable search engine" property="og:description" />
         <meta content="https://purploided.github.io/Re-Find/" property="og:url" />
         <meta content="@Extras/reupmini.png" property="og:image" />
-        <script async src="https://cse.google.com/cse.js?cx=257fd314222af4ffd"></script>
+        <script async src="https://cse.google.com/cse.js?cx=a7a602411b77f45fa"></script>
     </head>
     <body class="body" id="body">
         <div class="goggleOne" id="goggleOne">
@@ -36,6 +36,9 @@
 
                     background-color: #20212400;
                     
+                }
+                .gcsc-more-maybe-branding-root {
+                    display: none;
                 }
 
                 .gsc-control-cse {
