Added "Re-Find Logged", a version of Re-Find that WILL log your searches if you want!

--- a/@Re-Find Logged/index.html
+++ b/@Re-Find Logged/index.html
@@ -18,7 +18,7 @@
     <body class="body" id="body">
         <div class="goggleOne" id="goggleOne">
             <div class="gcse-search" id="search"></div>
-            <img src="/@Extras/REFIND.png" class="goggle" id="goggle"></img>
+            <img src="REFIND.png" class="goggle" id="goggle"></img>
             <div id="searchdiv" class="searchdiv"></div>
             <style>
                 .gsc-results {
@@ -94,7 +94,7 @@
             <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
             <a class="findtwtr" id="findtwtr" href="https://twitter.com/GoggleNet">Re-Find Twitter</a>
-            <a class="findtwtr" id="findtwtr2" href="/index.html">‎ Go Back</a>
+            <a class="findtwtr" id="findtwtr2" href="https://purploided.github.io/Re-Find/">‎ Go Back</a>
 
             <script>
                 function checkURL(url) {
