--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <a class="findtwtr" id="findtwtr" href="https://twitter.com/GoggleNet">Re-Find Twitter</a>
             <a class="findtwtr" id="findtwtr" href="@Re-Find Logged/index.html">‎ Re-Find Logged</a>
             <a class="addtab" id="addtab">‎ +</a>
+            <a class="tab2" id="tab2">‎ Tab 2</a>
         </div>
 
         <div class="goggleTwo" id="goggleTwo">
@@ -176,7 +177,7 @@
             <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
             <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
-            <a class="findtwtr" id="findtwtr">Tab 2</a>
+            <a class="tab1" id="tab1">Tab 1</a>
         </div>
         
         
