New Domain Name!

--- a/@Re-Find Logged/index.html
+++ b/@Re-Find Logged/index.html
@@ -11,7 +11,7 @@
         <meta name="start_url" content="/index.html">
         <meta content="Re-Find - The Most Findable Search Engine" property="og:title" />
         <meta content="Re-Find is the most findable search engine" property="og:description" />
-        <meta content="https://purploided.github.io/Re-Find/" property="og:url" />
+        <meta content="https://www.re-find.net" property="og:url" />
         <meta content="/@Extras/reupmini.png" property="og:image" />
         <script async src="https://cse.google.com/cse.js?cx=f28d81b2aaa164fbf"></script>
     </head>
@@ -94,7 +94,7 @@
             <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
             <a class="findtwtr" id="findtwtr" href="https://twitter.com/GoggleNet">Re-Find Twitter</a>
-            <a class="findtwtr" id="findtwtr2" href="https://purploided.github.io/Re-Find/">‎ Go Back</a>
+            <a class="findtwtr" id="findtwtr2" href="https://www.re-find.net">‎ Go Back</a>
 
             <script>
                 function checkURL(url) {
