--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="start_url" content="/index.html">
         <meta content="Re-Find" property="og:title" />
         <meta content="Search securely without the risk of getting logged. Re-Find doesn't send your searches to your history!" property="og:description" />
-        <meta content="https://purploided.github.io/Re-Find/" property="og:url" />
+        <meta content="https://www.re-find.net" property="og:url" />
         <meta content="https://github.com/purploided/Re-Find/blob/main/@Extras/reupmini.png?raw=true" property="og:image" />
         <script async src="https://cse.google.com/cse.js?cx=a7a602411b77f45fa"></script>
     </head>
