--- a/@Re-Find Logged/index.html
+++ b/@Re-Find Logged/index.html
@@ -94,7 +94,7 @@
             <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
             <a class="findtwtr" id="findtwtr" href="https://twitter.com/GoggleNet">Re-Find Twitter</a>
-            <a class="findtwtr" id="findtwtr2" href="https://www.re-find.net">‎ Go Back</a>
+            <a class="findtwtr" id="findtwtr2" href="https://www.re-find.net/">‎ Go Back</a>
 
             <script>
                 function checkURL(url) {
