--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
 
             <a class="findtwtr" id="findtwtr" href="https://twitter.com/GoggleNet">Re-Find Twitter</a>
-            <a class="findtwtr" id="findtwtr" href="@Re-Find Logged/index.html">‎ Re-Find Logged</a>
+            <a class="findtwtr" id="findtwtr" href="https://logged.re-find.net">‎ Re-Find Logged</a>
             <a class="addtab" id="addtab">‎ +</a>
             <a class="tab2" id="tab2">‎ Tab 2</a>
 
