--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                     border: 1px solid #000;
                     border-radius: 2px;
                     margin-top: 2px;
-                    border-color: #000;
-                    background-color: #333;
+                    border-color: #00000000;
+                    background-color: #33333300;
                     background-image: linear-gradient(top, #333, #333);
+                    display: none;
                 }
 
                 .gs-webResult.gs-result a.gs-title:link, .gs-webResult.gs-result a.gs-title:link b, .gs-imageResult a.gs-title:link, .gs-imageResult a.gs-title:link b {
@@ -71,6 +72,11 @@
                 }
                 .gs-webResult div.gs-visibleUrl {
                     color: #ffffff;
+                }
+
+                input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus {
+                    border-color: #BBBBBB;
+                    border-radius: 30px;
                 }
             </style>
             
@@ -130,9 +136,10 @@
                     border: 1px solid #000;
                     border-radius: 2px;
                     margin-top: 2px;
-                    border-color: #000;
-                    background-color: #333;
+                    border-color: #00000000;
+                    background-color: #33333300;
                     background-image: linear-gradient(top, #333, #333);
+                    display: none;
                 }
 
                 .gs-webResult.gs-result a.gs-title:link, .gs-webResult.gs-result a.gs-title:link b, .gs-imageResult a.gs-title:link, .gs-imageResult a.gs-title:link b {
@@ -140,6 +147,11 @@
                 }
                 .gs-webResult div.gs-visibleUrl {
                     color: #ffffff;
+                }
+
+                input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus {
+                    border-color: #BBBBBB;
+                    border-radius: 30px;
                 }
             </style>
             
