--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
     <img id="pfp" class="pfp" src="@Extras/reupmini.png"></img>
     <img id="avdecor" class="avdecor" src="@Extras/noavdecor.png"></img>
 
-    <script src="@JavaScript/pop-bang.js"></script>
-    <script src="@JavaScript/avdecor.js"></script>
-    <script src="@JavaScript/tabs.js"></script>
+    <script type="text/typescript" src="@JavaScript/pop-bang.ts"></script>
+    <script type="text/typescript" src="@JavaScript/avdecor.ts"></script>
+    <script type="text/typescript" src="@JavaScript/tabs.ts"></script>
+
+    <script src="https://unpkg.com/typescript/lib/typescript.js"></script>
+    <script src="https://raw.githack.com/basarat/typescript-script/master/transpiler.js"></script>
 </html>
