JavaScript converted into TypeScript

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
     <img id="pfp" class="pfp" src="@Extras/reupmini.png"></img>
     <img id="avdecor" class="avdecor" src="@Extras/noavdecor.png"></img>
 
-    <script type="text/typescript" src="@JavaScript/pop-bang.ts"></script>
-    <script type="text/typescript" src="@JavaScript/avdecor.ts"></script>
-    <script type="text/typescript" src="@JavaScript/tabs.ts"></script>
+    <script type="text/typescript" src="@Scripts/avdecor.ts"></script>
+    <script type="text/typescript" src="@Scripts/pop-bang.ts"></script>
+    <script type="text/typescript" src="@Scripts/tabs.ts"></script>
 
     <script src="https://unpkg.com/typescript/lib/typescript.js"></script>
     <script src="https://raw.githack.com/basarat/typescript-script/master/transpiler.js"></script>
