Tabs fixed, profile updated, pop-bang updated

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <a class="findtwtr" id="findtwtr" href="https://twitter.com/GoggleNet">Re-Find Twitter</a>
             <a class="findtwtr" id="findtwtr" href="https://logged.re-find.net">‎ Re-Find Logged</a>
             <a class="tab2" id="tab2">‎ Tab 2</a>
+            <a class="tab1" id="tab11">Tab 1</a>
 
             <svg class="addtab" id="addtab" fill="#ffffff" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
                 width="15px" height="15px" viewBox="0 0 45.402 45.402"
@@ -162,6 +163,7 @@
             </style>
 
             <a class="tab1" id="tab1">Tab 1</a>
+            <a class="tab2" id="tab22" style="display:block;">‎ Tab 2</a>
         </div>
     </body>
 
