Changed Dark Mode (again), added a new font, and bug fixes.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
                 }
 
                 input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus {
-                    border-color: #BBBBBB;
+                    border-color: #303030;
                     border-radius: 30px;
+                    background-color: #121212;
+                    color: #ffffff;
+                    font-family: 'Moon Bold';
                 }
                 .gsc-results .gsc-cursor-box .gsc-cursor-current-page {
                     color: #333;
