Fixed up some stuff.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css"></link>
-        <link rel="icon" type="image/x-icon" href="Extras/reupmini.png"></link>
+        <link rel="icon" type="image/x-icon" href="Extras/reflogo.png"></link>
         <title id="refindtitle">Re-Find</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#000000">
@@ -12,7 +12,7 @@
         <meta content="Re-Find" property="og:title" />
         <meta content="Search securely without the risk of getting logged. Re-Find doesn't send your searches to your history!" property="og:description" />
         <meta content="https://www.re-find.net" property="og:url" />
-        <meta content="https://github.com/purploided/Re-Find/blob/main/Extras/reupmini.png?raw=true" property="og:image" />
+        <meta content="https://raw.githubusercontent.com/purploided/Re-Type/refs/heads/main/images/reflogo.png" property="og:image" />
         <script async src="https://cse.google.com/cse.js?cx=a7a602411b77f45fa"></script>
     </head>
     
