Changed back to javascript for extra performance.

--- a/index.html
+++ b/index.html
@@ -101,10 +101,7 @@
     <img id="pfp" class="pfp" src="Extras/reupmini.png"></img>
     <img id="avdecor" class="avdecor" src="Extras/noavdecor.png"></img>
 
-    <script type="text/typescript" src="Scripts/avdecor.ts"></script>
-    <script type="text/typescript" src="Scripts/pop-bang.ts"></script>
-    <script type="text/typescript" src="Scripts/profile.ts"></script>
-
-    <script src="https://unpkg.com/typescript/lib/typescript.js"></script>
-    <script src="https://raw.githack.com/basarat/typescript-script/master/transpiler.js"></script>
+    <script type="text/javascript" src="Scripts/avdecor.js"></script>
+    <script type="text/javascript" src="Scripts/pop-bang.js"></script>
+    <script type="text/javascript" src="Scripts/profile.js"></script>
 </html>
