--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css"></link>
-        <link rel="icon" type="image/x-icon" href="Extras/reflogo.png"></link>
+        <link rel="icon" type="image/x-icon" href="Re-Find-2025.png"></link>
         <title id="refindtitle">Re-Find</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#000000">
@@ -11,19 +11,45 @@
         <meta name="start_url" content="/index.html">
         <meta content="Re-Find" property="og:title" />
         <meta content="Search securely without the risk of getting logged. Re-Find doesn't send your searches to your history!" property="og:description" />
-        <meta content="https://www.re-find.net" property="og:url" />
-        <meta content="https://raw.githubusercontent.com/purploided/Re-Type/refs/heads/main/images/reflogo.png" property="og:image" />
+        <meta content="https://re-find.purploid.xyz" property="og:url" />
+        <meta content="Re-Find-2025.png" property="og:image" />
         <script async src="https://cse.google.com/cse.js?cx=a7a602411b77f45fa"></script>
     </head>
     
     <body class="body" id="body">
         <div class="refindOne" id="refindOne"></div>
-            <div class="gcse-search" id="search"></div>
-            <h1 class="refind" id="refind">Re-Find</h1>
+            <div>
+                <div class="gcse-search" id="search"></div>
+                <div style="display: flex; justify-content: center; align-items: flex-start; margin-top: 150px;">
+                    <img class="refind" id="refind" src="Re-Find-2025.png" alt="Re-Find" style="max-width: 100px; max-height: 100px; object-fit: contain;">
+                    <style>
+                    @media (max-width: 900px) {
+                        #refind {
+                            max-width: 60px !important;
+                            max-height: 60px !important;
+                            margin-top: 40px;
+                            display: flex; 
+                            justify-content: center;
+                            align-items: flex-start;
+                        }
+                    }
+                    @media (max-width: 600px) {
+                        #refind {
+                            max-width: 60px !important;
+                            max-height: 60px !important;
+                            margin-top: 40px;
+                            display: flex; 
+                            justify-content: center;
+                            align-items: flex-start;
+                        }
+                    }
+                    </style>
+                </div>
+            </div>
             <style>
                 @font-face {
-                    font-family: 'Moon Bold';
-                    src: url(Fonts/Moon\ Bold.otf);
+                    font-family: 'Typographia';
+                    src: url(Fonts/DroplineRegular-Wpegz.otf);
                 }
                 .gsc-results {
                     background-color: #20212400;
@@ -34,13 +60,13 @@
                 }
 
                 .gsc-control-cse {
-                    font-family: 'Moon Bold';
+                    font-family: 'Typographia';
                     font-weight: 100;
                     border-color: #20212400;
                     background-color: #20212400;
                 }
                 .styleable-rootcontainer {
-                    font-family: 'Moon Bold';
+                    font-family: 'Typographia';
                     font-size: 13px;
                     padding-bottom: 6px;
                     padding-left: 4px;
@@ -80,11 +106,11 @@
                 }
 
                 input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus {
-                    border-color: #303030;
+                    border-color: #30303000;
                     border-radius: 30px;
-                    background-color: #121212;
-                    color: #ffffff;
-                    font-family: 'Moon Bold';
+                    background-color: #3f3f3f;
+                    color: #c9c9c9;
+                    font-family: 'Typographia';
                 }
                 .gsc-results .gsc-cursor-box .gsc-cursor-current-page {
                     color: #333;
@@ -95,10 +121,22 @@
                     background-color: #FFF0;
                     color: #444444;
                 }
+                .gsc-completion-container {
+                    font-family: Arial, sans-serif;
+                    font-size: 16px;
+                    background: #262626;
+                    border: 1px solid #bbb0;
+                    border-radius: 20px;
+                }
+                .gsc-completion-selected {
+                    background-color: #333333;
+                    color: #ffffff;
+                }
+                
             </style>
         </div>
     </body>
-    <img id="pfp" class="pfp" src="Extras/reupmini.png"></img>
+    <img id="pfp" class="pfp"></img>
     <img id="avdecor" class="avdecor" src="Extras/noavdecor.png"></img>
 
     <script type="text/javascript" src="Scripts/avdecor.js"></script>
